# Player_Universe_Trx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  mypy.yml  pull_request_template.md  pytest.yml
player_universe_trx/: main.py
player_universe_trx/matchers/: player_matcher.py
player_universe_trx/models/: __init__.py  hitter_projections.py  player.py  projections.py
player_universe_trx/utils/: constants.py  file_utils.py  model_utils.py  output_utils.py
tests/: conftest.py
tests/fixtures/: espn_player_universe.json
tests/matchers/: test_accented_name_matching.py  test_middle_initial.py  test_player_matcher.py
tests/models/: test_player.py  test_player_model_merge.py  test_player_name_validation.py  test_players.py
tests/utils/: test_model_utils.py
